testsuite/tests/checks/conditional_expressions/test.out
cond.adb:2:23: error: conditional expression
2 |    Var1 : Integer := (if I > J then 1 else 0);  --  FLAG
  |                       ^^^^^^^^^^^^^^^^^^^^^^ 

